fixed the alignment issue on welcome page

--- a/Pylot/app/static/css/styles.css
+++ b/Pylot/app/static/css/styles.css
@@ -18,7 +18,8 @@
 
 
 .box {
-	margin-left: 170px;
+	margin-left: 90px;
+	width: 950px;
 }
 
 	.box p {
